# extended-rational

./: .gitignore  Cargo.toml  LICENSE  README.md
src/: lib.rs
