[package]
name = "extended-rational"
version = "1.3.0"
authors = ["Scott Taylor <scott11x8@gmail.com>"]

description = "Provides implementations of high-accuracy projectively-extended rational numbers and macros for creating them."
keywords = ["rational", "extended", "number", "infinity", "fraction"]
readme = "README.md"
license = "MIT"
categories = ["data-structures"]

include = ["src/**/*", "Cargo.toml", "LICENSE"]