[package]
name = "extended-rational"
version = "1.3.3"
authors = ["Scott Taylor <scott11x8@gmail.com>"]

description = "Provides implementations of high-accuracy projectively-extended rational numbers and macros for creating them."
keywords = ["rational", "extended", "number", "infinity", "fraction"]
readme = "README.md"
license = "MIT"
categories = ["data-structures"]

include = ["src/**/*", "Cargo.toml", "LICENSE"]

[features]
default = []

bit_manager_enabled = ["bit_manager", "bit_manager_derive"]

[dependencies]
bit_manager = { version = "0.5.0", optional = true }
bit_manager_derive = { version = "0.1.0", optional = true }